# ed_foo

./: .gitignore  .pre-commit-config.yaml  .python-version  .sqlfluffignore  Makefile  README.md  alembic.ini  config.example.yaml  constants.py  db.py  debug  debug.py  download_dump_data  download_dump_data.py  ed_types.py  eddn_listener  eddn_listener.py  find_all_commodity_prices_in_system.py  find_all_hotspots_for_mineable_in_system.py  find_all_hotspots_for_mineral_in_system  find_best_reinforcement_mining_in_system.py  find_potential_acquisition_system_stations  find_potential_acquisition_system_stations.py  find_potential_reinforcement_system_stations  find_potential_reinforcement_system_stations.py  find_top_commodities_in_system_per_station.py  import_dump_data  populated_galaxy_systems.py  populated_galaxy_systems_filterer.py  populated_galaxy_systems_importer.py  powerplay_systems.py  processor.py  pyproject.toml  queryer.py  requirements.txt  timer.py  update_data
archive/: argparse_actions.py  debug.py  download_dump_data.py  find_all_commodity_prices_in_system.py  find_all_hotspots_for_mineable_in_system.py  find_best_reinforcement_mining_in_system.py  find_potential_acquisition_system_stations.py  find_potential_reinforcement_system_stations.py  find_top_commodities_in_system_per_station.py  import_dump_data.py  powerplay_systems.py
archive/src/: constants.py  data_manager.py  populated_galaxy_systems.py
archive/src/types/: __init__.py  common.py  station.py  system.py
archive/types/: README.md
archive/typings/: aenum.pyi
docs/: architecture.md  schema.dbml
metadata/: README.md  commodities.chemicals.yaml  commodities.consumer_items.yaml  commodities.foods.yaml  commodities.industrial_materials.yaml  commodities.legal_drugs.yaml  commodities.machinery.yaml  commodities.medicines.yaml  commodities.metals.yaml  commodities.minerals.yaml  commodities.narcotics.yaml  commodities.nonmarketable.yaml  commodities.powerplay.yaml  commodities.salvage.yaml  commodities.slavery.yaml  commodities.technology.yaml  commodities.textiles.yaml  commodities.waste.yaml  commodities.weapons.yaml  strings.data_scans.yaml  strings.economies.yaml  strings.faction_states.yaml  strings.governments.yaml  strings.happiness.yaml  strings.security_levels.yaml  strings.signal_source.yaml
metadata/schemas/: commodities.schema.json  enums.schema.json  strings.schema.json
scripts/: foo.py  queryer.py
src/: constants.py  container.py.bak  data_manager.py  db.py  ed_types.py  logging.py  logging_bootstrap.py  main.py  populated_galaxy_systems.py  populated_galaxy_systems_importer.py  powerplay_systems.py  timer.py  utils.py
src/adapters/data_ingestion/: README.md
src/adapters/data_ingestion/spansh/: __init__.py  common.py  data_ingestor.py  downloader.py  loader.py  station.py  system.py
src/adapters/incoming/: api_handler.py
src/adapters/ingress/cli/: router.py
src/adapters/ingress/discord/: __init__.py  bot.py
src/adapters/persistence/postgresql/: __init__.py  adapter.py  body_db.py  db.py  station_db.py  system_db.py  types.py
src/alembic/: env.py  script.py.mako
src/alembic/versions/: 2025-05-06_4b0be5c0bf46_create_initial_tables.py  2025-05-06_6b82a9368504_create_initial_tables.py  2025-05-07_1b55950b7622_create_initial_funcs_and_views.py  2025-05-21_2920a950c2dc_create_initial_timescaledb_tables.py  4595957bec5e_.py  4b6503d6446d_.py  5cefe09e7540_.py  608453582137_.py  6cc057923c6a_.py  7b11f5b4198e_.py  b40283fbd0b3_.py
src/app/: main.py
src/common/: constants.py  game_constants.py  logging.py  timer.py  top_n_stack.py  utils.py
src/core/: command_bus.py
src/core/models/: body_model.py  commodities.py  commodities_model.py  commodity_metadata.py  common_model.py  station_model.py  system_model.py
src/core/ports/: api_command_port.py  body_port.py  converter_port.py  data_dump_retrieval_port.py  data_ingestion_port.py  station_port.py  system_port.py
src/core/usecases/: import_data_usecase.py
src/ekaine/: container.py.bak  main.py
src/ekaine/alembic/: env.py
src/ekaine/alembic/versions/: 2025-05-06_6b82a9368504_create_initial_tables.py  2025-05-07_1b55950b7622_create_initial_funcs_and_views.py  2025-05-21_2920a950c2dc_create_initial_timescaledb_tables.py
src/ekaine/common/: constants.py  game_constants.py  logging.py  logging_bootstrap.py  timer.py
src/ekaine/ingestion/eddn/: listener.py  schemas.py
src/ekaine/ingestion/spansh/: __init__.py  pipeline.py
src/ekaine/interfaces/cli/: router.py
src/ekaine/interfaces/discord/: __init__.py  bot.py
src/ekaine/interfaces/rest/: api_handler.py
src/ekaine/postgresql/: __init__.py  adapter.py  db.py  timeseries.py  utils.py
src/ekaine/tests/: test_cache_keys.py
src/ingestion/eddn/: listener.py  schemas.py
src/ingestion/eddn/processors/: commodities_v3_0.py  fssbodysignals_v1_0.py  fsssignaldiscovered_v1_0.py  journal_v1_0.py
src/ingestion/spansh/: __init__.py  adapter.py  main.py  pipeline.py
src/ingestion/spansh/models/: __init__.py  body_spansh.py  common_spansh.py  station_spansh.py  system_spansh.py
src/interfaces/cli/: router.py
src/interfaces/discord/: __init__.py  bot.py  utils.py
src/interfaces/discord/commands/: __init__.py  get_hotspots.py  get_mining_expandable.py  get_top_commodities.py  get_top_reinforcement_mining_routes.py
src/postgresql/: __init__.py  adapter.py  db.py  timeseries.py  utils.py
src/postgresql/sql/functions/: derived_get_top_sell_commodities_in_system_v1.sql
src/postgresql/sql/views/: derived_unoccupied_systems_view_v1.sql
src/tests/: test_cache_keys.py
src/types/: __init__.py  commodities.py  station.py  system.py
tools/docker/: docker-compose.prod.overrides.yaml  docker-compose.yaml  docker-compose.yml
tools/docker/e_kaine/: Dockerfile
tools/docker/ekaine/: Dockerfile  supervisord.conf
tools/docker/grafana/conf/: grafana.ini
tools/scripts/: debug_visualize_timeseries.py  generate_eddn_models.sh  generate_metadata_models.sh  generate_models.sh  hydrate_postgres.sh  validate_yaml_schema.py
typings/: aenum.pyi
(+59 files in other folders)
