[project]
name = "ed_foo"
version = "0.1.0"
description = ""
authors = [
    {name = "remiscarlet",email = "remilia@scarl.et"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "dataclasses-json (==0.6.7)",
    "black (==25.1.0)",
    "certifi (==2025.1.31)",
    "charset-normalizer (==3.4.1)",
    "click (==8.1.8)",
    "idna (==3.10)",
    "marshmallow (==3.26.1)",
    "mypy-extensions (==1.0.0)",
    "packaging (==24.2)",
    "pathspec (==0.12.1)",
    "platformdirs (==4.3.7)",
    "pyzmq (==26.4.0)",
    "requests (==2.32.3)",
    "tabulate (==0.9.0)",
    "tqdm (==4.67.1)",
    "typing-inspect (==0.9.0)",
    "typing-extensions (==4.13.2)",
    "urllib3 (==2.4.0)",
    "zmq (==0.0.0)",
    "datamodel-code-generator (>=0.30.0,<0.31.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "typer (>=0.15.2,<0.16.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ed_foo"
version = "0.1.0"
description = ""
authors = ["remiscarlet <remilia@scarl.et>"]
packages = [{ include = "src" }]

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
flake8-pyproject = "^1.2.3,<2.0.0"
pre-commit = "^4.2.0"
pytest = "^8.3.5"

[tool.poetry.scripts]
cli = "src.app.main:main"

[tool.isort]
profile = "black"
src_paths = ["src"]
known_src = ["src"]

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.flake8]
max-line-length = 120
extend-ignore = [ "E203", "E701" ]
exclude = ["__pycache__", "build", "dist", ".venv", "data", "gen"]


[tool.mypy]
python_version = "3.13"
strict = true
namespace_packages = true
mypy_path = "typings"
