[project]
name = "ekaine"
version = "0.1.0"
description = ""
authors = [
    {name = "remiscarlet",email = "remilia@scarl.et"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "dataclasses-json (==0.6.7)",
    "black (==25.1.0)",
    "certifi (==2025.1.31)",
    "charset-normalizer (==3.4.1)",
    "click (==8.1.8)",
    "idna (==3.10)",
    "marshmallow (==3.26.1)",
    "mypy-extensions (==1.0.0)",
    "packaging (==24.2)",
    "pathspec (==0.12.1)",
    "platformdirs (==4.3.7)",
    "pyzmq (==26.4.0)",
    "requests (==2.32.3)",
    "tabulate (==0.9.0)",
    "tqdm (==4.67.1)",
    "typing-inspect (==0.9.0)",
    "typing-extensions (==4.13.2)",
    "urllib3 (==2.4.0)",
    "zmq (==0.0.0)",
    "datamodel-code-generator (>=0.30.0,<0.31.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "yamlfix (>=1.17.0,<2.0.0)",
    "yamllint (>=1.37.0,<2.0.0)",
    "jsonschema (>=4.23.0,<5.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "dependency-injector (>=4.46.0,<5.0.0)",
    "psycopg[binary] (>=3.2.6,<4.0.0)",
    "types-pyyaml (>=6.0.12.20250402,<7.0.0.0)",
    "ijson (>=3.3.0,<4.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "types-aiofiles (>=24.1.0.20250326,<25.0.0.0)",
    "sqlfluff (>=3.4.0,<4.0.0)",
    "types-tqdm (>=4.67.0.20250417,<5.0.0.0)",
    "types-tabulate (>=0.9.0.20241207,<0.10.0.0)",
    "geoalchemy2 (>=0.17.1,<0.18.0)",
    "shapely (>=2.1.0,<3.0.0)",
    "types-shapely (>=2.1.0.20250418,<3.0.0.0)",
    "interactions-py (>=5.14.0,<6.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ekaine"
version = "0.1.0"
description = ""
authors = ["remiscarlet <remilia@scarl.et>"]
packages = [{ include = "src" }]

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
flake8-pyproject = "^1.2.3,<2.0.0"
pre-commit = "^4.2.0"
pytest = "^8.3.5"
pgcli = "^4.3.0"
datamodel-code-generator = {extras = ["debug"], version = "^0.30.1"}

[tool.poetry.scripts]
main = "src.main:main"
cli = "src.main:cli"
generate_eddn_schema_mapping = "src.ingestion.eddn.schemas:generate_mapping"
lint_metadata = "tools.scripts.validate_yaml_schema:main"

[tool.isort]
profile = "black"
src_paths = ["src"]
known_src = ["src"]

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.flake8]
max-line-length = 120
extend-ignore = [ "E203", "E701" ]
exclude = ["__pycache__", "archive", "build", "dist", ".venv", "data", "gen"]

[tool.yamlfix]
line_length = 80
section_whitelines = 1

[tool.mypy]
python_version = "3.13"
strict = true
namespace_packages = true
mypy_path = "typings"
exclude = "(archive|data|gen)/"

[tool.sqlfluff]
dialect = "postgres"
sql_file_exts = [".sql"]
max_line_length = 100
exclude_rules = []
recurse = true
format = "sql"

[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.identifiers]
capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.functions]
capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.literals]
capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.types]
capitalisation_policy = "lower"

[tool.sqlfluff.rules.layout.commas]
comma_style = "trailing"

[tool.sqlfluff.rules.layout.indent]
indent_unit = "space"
tab_space_size = 4

[tool.sqlfluff.rules.layout.long_lines]
max_line_length = 100

[tool.sqlfluff.rules.aliasing.table]
aliasing = "explicit"

[tool.sqlfluff.rules.aliasing.column]
aliasing = "explicit"

[tool.sqlfluff.rules.ambiguous.column_count]
enabled = true

[tool.sqlfluff.rules.references.qualification]
require_explicit = true